--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,6 @@ buildscript {
 group 'com.gooluke'
 version '1.0-SNAPSHOT'
 
-/*plugins {
-    id "io.franzbecker.gradle-lombok" version "3.1.0"   //在此添加插件否则lombok引用会失败
-}*/
-
 apply plugin:'org.springframework.boot'
 apply plugin:'java'
 apply plugin:'io.spring.dependency-management'
@@ -25,7 +21,7 @@ repositories {
 List common = [
         'mysql:mysql-connector-java:8.0.21',
         'com.alibaba:druid:1.1.12',
-        'org.projectlombok:lombok:1.18.2',
+        'org.projectlombok:lombok:1.18.22',
         'com.google.guava:guava:20.0',
         'com.alibaba:fastjson:1.2.75',
         'org.apache.httpcomponents:httpclient:4.5.13'
@@ -43,6 +39,7 @@ List spring = [
 
 dependencies {
     implementation(common,spring)
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
