添加dao层，自定义druid数据源

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 server.port=1702
 server.servlet.context-path=/gooluke-admin
 
+#jdbc
+jdbc.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc.datasource.url=jdbc:mysql://localhost:3306/gooluke-admin?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useAffectedRows=true&serverTimezone=UTC
+jdbc.datasource.username=root
+jdbc.datasource.password=123
+mybatis.mapper-locations=classpath:/mapper/*.xml
+
 logging.file.path=classpath:log4j2.xml
