接口添加超时及异常捕获

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,12 @@ jdbc.datasource.username=root
 jdbc.datasource.password=123
 mybatis.mapper-locations=classpath:/mapper/*.xml
 
+#threadPool
+threadPool.corePoolSize=5
+threadPool.maxPoolSize=10
+threadPool.keepAliveSeconds=30
+#??????
+threadPool.threadNamePrefix=threadPool-
+threadPool.queueCapacity=10
+
 logging.file.path=classpath:log4j2.xml
