--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ jdbc.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 jdbc.datasource.url=jdbc:mysql://localhost:3306/gooluke-admin?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useAffectedRows=true&serverTimezone=UTC
 jdbc.datasource.username=root
 jdbc.datasource.password=123
-mybatis.mapper-locations=classpath:/mapper/*.xml
+#mybatis.mapper-locations=classpath:/mapper/*.xml
 
 #threadPool
 threadPool.corePoolSize=5
